message MSG_SIGNIN_LBCL
{ 
   enum Result
   { 
      UNKNOW = 0; // 未知
      SUCCESS = 1; // 成功
      OFFLINE = 2; // 服务器已离线
      NO_CLIENT = 3; // 无客户端信息
      REDIS_ERROR = 4; // 数据库错误
      PLAYER_OFFLINE = 5; // 玩家不在线
      NO_TIME_TO = 6; // 还没到时间
      ON_IMPAWN = 7; // 押分无法签到
   }
   required uint32   msgID = 1; // 消息ID
   optional uint32   pid = 2; // 玩家ID
   optional uint64   coin = 3; // 奖励金额（成功有效）
   optional uint32   remainTime = 4; // 剩余多久时间签到
   optional Result   result = 5; // 结果
}